--- a/src/common/layouts/Page/Pagetitle/Pagetitle.module.css
+++ b/src/common/layouts/Page/Pagetitle/Pagetitle.module.css
@@ -1,16 +1,27 @@
 @value variables: "../../../styles/variables.css";
-@value _h1 from variables;
+@value _h1, _menuwidth from variables;
 
 .Pagetitle {
-    /* "fw1 tc f2 display absolute dn dib-ns near-white" */
     color: #fff;
-    font-size: _h1;
+    font-size: 2.6rem;
     font-family: 'Petit Formal Script', serif;
     display: inline-block;
     text-align: center;
     position: absolute;
     font-weight: 100;
-    top: 40%;
+    top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
+    width: 100%;
+    line-height: 100%;
+}
+
+@media (min-width: _menuwidth) {
+    
+    .Pagetitle {
+        width: 8rem;
+        font-size: 3rem;
+        top: 40%;
+    }
+
 }
